--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.16.4",
-    "explorer-jes": "0.0.1"
+    "explorer-jes": "0.0.1-snapshot.20181212-145136-express-served-ui"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
