--- a/package.json
+++ b/package.json
@@ -14,12 +14,20 @@
   "scripts": {
     "start": "node src/index.js",
     "lint": "eslint .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nyc mocha"
   },
   "dependencies": {
     "yargs": "^12.0.5"
   },
   "devDependencies": {
-    "eslint": "^5.10.0"
+    "axios": "^0.18.0",
+    "chai": "^4.2.0",
+    "debug": "^4.1.1",
+    "eslint": "^5.10.0",
+    "mocha": "^5.2.0",
+    "mocha-jenkins-reporter": "^0.4.1",
+    "mocha-multi-reporters": "^1.1.7",
+    "mochawesome": "^3.1.1",
+    "nyc": "^13.1.0"
   }
 }
