--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "start": "node src/index.js",
     "lint": "eslint .",
-    "test": "DEBUG=test:* nyc mocha"
+    "test": "nyc mocha"
   },
   "dependencies": {
     "yargs": "^12.0.5"
