submit coverage report to sonarqube
Signed-off-by: Jack (T.) Jia <jack-tiefeng.jia@ibm.com>

--- a/.nycrc
+++ b/.nycrc
@@ -1,8 +1,8 @@
 {
   "reporter": [
-    "html",
+    "lcov",
     "cobertura",
     "text"
   ],
-  "report-dir": "./coverage"
+  "report-dir": "./reports"
 }
