--- a/configs/config.json.template
+++ b/configs/config.json.template
@@ -10,5 +10,10 @@
     "passphrase": "{{https-passphrase}}",
     "key": "{{https-key}}",
     "cert": "{{https-cert}}"
+  },
+  "csp": {
+    "frame-ancestors": [
+      "{{csp-frame-ancestors}}"
+    ]
   }
 }
