ignore more for publishing
Signed-off-by: Jack (T.) Jia <jack-tiefeng.jia@ibm.com>

--- a/.npmignore
+++ b/.npmignore
@@ -10,6 +10,7 @@ src/languages
 
 .editorconfig
 .eslintrc.yml
+.eslintignore
 
 # MacOS
 .DS_Store
@@ -23,6 +24,7 @@ sonar-project.properties
 
 # test result
 .nyc_output
+.nycrc
 reports/
 
 # default public folder
@@ -30,3 +32,9 @@ public
 
 # dco signoffs
 dco_signoffs
+
+# tests
+test/
+
+# AppScan configuration
+*.ppf
