--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,12 @@
 # must be unique in a given SonarQube instance
-sonar.projectKey=zowe:explorer-ui-server
+sonar.projectKey=zowe_explorer-ui-server
+sonar.organization=zowe
 # this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
 sonar.projectName=Zowe - Explorer UI Server
-sonar.projectVersion=1.0
+# this will be automatically set by Jenkins Library
+# sonar.projectVersion=1.0
+# Project source repository.
+sonar.links.scm=https://github.com/zowe/explorer-ui-server
  
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # This property is optional if sonar.modules is set. 
