--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "test": "nyc mocha"
   },
   "dependencies": {
+    "abort-controller": "^3.0.0",
+    "node-fetch": "^2.6.0",
     "yargs": "^12.0.5"
   },
   "devDependencies": {
