--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test": "nyc mocha"
   },
   "dependencies": {
-    "yargs": "^15.3.1"
+    "stdio": "0.2.7"
   },
   "devDependencies": {
     "abort-controller": "^3.0.0",
