--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "program": "${workspaceFolder}\\src\\index.js",
              //"args": ["-s", "jes", "-b", "/ui/v1/explorer-jes", "-p", "7554", "-k", "C:\\zowe\\explorer-componentisation\\configs\\server.key", "-c", "C:\\zowe\\explorer-componentisation\\configs\\server.cert", "-x", "", "-w", "", "-f", "https://tvt5003.svl.ibm.com"],
              //"args": [ "-s", "jes", "-b", "/", "-p", "9090", "-f", "https://test.zowe.org/*", "-k", "configs/server.key", "-c", "configs/server.cert" ]
-             "args": [ "-s", "", "-b", "/relpath", "-d", "public","-p", "9090", "-f", "https://test.zowe.org/*", "-k", "configs/server.key", "-c", "configs/server.cert" ]
+             "args": [ "-s", "", "-b", "/relpath", "-d", "public","-p", "9090", "-f", "", "-k", "configs/server.key", "-c", "configs/server.cert" ]
         },
         {
             "type": "node",
@@ -36,7 +36,7 @@
                 "--timeout",
                 "999999",
                 "--colors",
-                "${workspaceFolder}\\test\\relpath\\test-relpath.js"
+                "${workspaceFolder}\\test\\csp\\test-csp.js"
             ],
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen"
