--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "dependencies": {
     "yargs": "^12.0.5"
   },
+  "optionalDependencies": {
+    "keyring_js": "~1.0.0"
+  },
   "devDependencies": {
     "axios": "^0.19.0",
     "chai": "^4.2.0",
