--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "dependencies": {
     "stdio": "0.2.7"
   },
+  "optionalDependencies": {
+    "keyring_js": "~1.0.0"
+  },
   "devDependencies": {
     "abort-controller": "^3.0.0",
     "axios": "^0.19.0",
