Try addinf publishConfig back in
Signed-off-by: stevenhorsman <steven@uk.ibm.com>

--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "bin": {
     "explorer-ui-server": "src/index.js"
   },
-  // "publishConfig": {
-  //   "registry": "https://zowe.jfrog.io/zowe/api/npm/npm-local-release/"
-  // },
+  "publishConfig": {
+    "registry": "https://zowe.jfrog.io/zowe/api/npm/npm-local-release/"
+  },
   "scripts": {
     "start": "node src/index.js",
     "lint": "eslint .",
