--- a/.gitignore
+++ b/.gitignore
@@ -72,5 +72,13 @@ typings/
 # vscode plugins
 .history
 
+#pax ignore
+.pax/*
+!.pax/.keep
+!.pax/pre-packaging.sh
+!.pax/post-packaging.sh
+!.pax/prepare-workspace.sh
+!.pax/catchall-packaging.sh
+
 # build directory
 dist
