--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "explorer-ui-server",
-  "version": "0.2.13",
+  "version": "0.2.14",
   "description": "HTTP Server to host static files",
   "author": "IBM",
   "license": "EPL-2.0",
@@ -13,7 +13,8 @@
   },
   "scripts": {
     "start": "node src/index.js",
-    "build": "npm run clean && cp -r configs dist/configs && cp -r src dist/src && cp *.json dist && cp README.md dist",
+    "build": "cp -r configs dist/configs && cp -r src dist/src && cp *.json dist && cp README.md dist",
+    "prebuild": "npm run clean",
     "clean": "rimraf dist && mkdirp dist",
     "lint": "eslint .",
     "test": "nyc mocha"
