--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "start": "node src/index.js",
-    "build": "cp -r configs dist/configs && cp -r src dist/src && cp *.json dist && cp README.md dist",
+    "build": "cp -r configs dist/configs && cp -r src dist/src && cp -r public dist/public && cp *.json dist && cp README.md dist",
     "prebuild": "npm run clean",
     "clean": "rimraf dist && mkdirp dist",
     "lint": "eslint .",
@@ -36,7 +36,7 @@
     "mocha-jenkins-reporter": "^0.4.3",
     "mocha-multi-reporters": "^1.1.7",
     "mochawesome": "^4.1.0",
-    "node-fetch": "^2.6.0",
+    "node-fetch": "^2.6.1",
     "nyc": "^14.1.0",
     "rimraf": "^3.0.2"
   }
