--- a/package.json
+++ b/package.json
@@ -20,6 +20,13 @@
     "test": "nyc mocha"
   },
   "dependencies": {
+    "ajv": "^6.12.3",
+    "flat": "^5.0.1",
+    "glob-parent": "^5.1.2",
+    "hosted-git-info": "^3.0.8",
+    "lodash": "^4.17.21",
+    "opener": "^1.5.2",
+    "pathval": "^1.1.1",
     "stdio": "0.2.7"
   },
   "optionalDependencies": {
